--- a/api/Leasing car project exercice.postman_collection.json
+++ b/api/Leasing car project exercice.postman_collection.json
@@ -8,14 +8,18 @@
 	"item": [
 		{
 			"name": "tests",
+			"item": []
+		},
+		{
+			"name": "requests",
 			"item": [
 				{
-					"name": "test",
+					"name": "get-customer",
 					"request": {
 						"method": "GET",
 						"header": [],
 						"url": {
-							"raw": "http://127.0.0.1:6432/hello/10",
+							"raw": "http://127.0.0.1:6432/customer/get/4",
 							"protocol": "http",
 							"host": [
 								"127",
@@ -25,199 +29,176 @@
 							],
 							"port": "6432",
 							"path": [
-								"hello",
-								"10"
+								"customer",
+								"get",
+								"4"
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "get-all-customers",
+					"request": {
+						"method": "GET",
+						"header": [],
+						"url": {
+							"raw": "http://127.0.0.1:6432/customer/getall",
+							"protocol": "http",
+							"host": [
+								"127",
+								"0",
+								"0",
+								"1"
+							],
+							"port": "6432",
+							"path": [
+								"customer",
+								"getall"
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "add-customer",
+					"request": {
+						"method": "POST",
+						"header": [
+							{
+								"key": "Content-Type",
+								"value": "application/json",
+								"type": "text"
+							}
+						],
+						"body": {
+							"mode": "raw",
+							"raw": "{\r\n    \"email\": \"contact1@contact.com\",\r\n    \"name\": \"Name\",\r\n    \"firstname\": \"Firstname\",\r\n    \"birthday\": \"1985-06-20T00:00:00Z\",\r\n    \"driving_licence_number\": \"MORGA657051SM9IJ\"\r\n}"
+						},
+						"url": {
+							"raw": "http://127.0.0.1:6432/customer/create",
+							"protocol": "http",
+							"host": [
+								"127",
+								"0",
+								"0",
+								"1"
+							],
+							"port": "6432",
+							"path": [
+								"customer",
+								"create"
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "update-customer",
+					"request": {
+						"method": "PUT",
+						"header": [
+							{
+								"key": "Content-Type",
+								"value": "application/json",
+								"type": "text"
+							}
+						],
+						"body": {
+							"mode": "raw",
+							"raw": "{\r\n    \"email\": \"contact@contact.com\",\r\n    \"name\": \"Name\",\r\n    \"firstname\": \"Firstname\",\r\n    \"birthday\": \"1985-06-20T00:00:00Z\",\r\n    \"driving_licence_number\": \"MORGA657054SM9IJ\"\r\n}"
+						},
+						"url": {
+							"raw": "http://127.0.0.1:6432/customer/update/7",
+							"protocol": "http",
+							"host": [
+								"127",
+								"0",
+								"0",
+								"1"
+							],
+							"port": "6432",
+							"path": [
+								"customer",
+								"update",
+								"7"
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "associate-customer2car",
+					"request": {
+						"method": "POST",
+						"header": [
+							{
+								"key": "Content-Type",
+								"value": "application/json",
+								"type": "text"
+							}
+						],
+						"body": {
+							"mode": "raw",
+							"raw": "{\r\n    \"customer_id\": 4,\r\n    \"car_id\": 12\r\n}"
+						},
+						"url": {
+							"raw": "http://127.0.0.1:6432/customer-car/associate",
+							"protocol": "http",
+							"host": [
+								"127",
+								"0",
+								"0",
+								"1"
+							],
+							"port": "6432",
+							"path": [
+								"customer-car",
+								"associate"
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "disassociate-customer2car",
+					"request": {
+						"method": "POST",
+						"header": [
+							{
+								"key": "Content-Type",
+								"value": "application/json",
+								"type": "text"
+							}
+						],
+						"body": {
+							"mode": "raw",
+							"raw": "{\r\n    \"customer_id\": 4,\r\n    \"car_id\": 12\r\n}",
+							"options": {
+								"raw": {
+									"language": "json"
+								}
+							}
+						},
+						"url": {
+							"raw": "http://127.0.0.1:6432/customer-car/disassociate",
+							"protocol": "http",
+							"host": [
+								"127",
+								"0",
+								"0",
+								"1"
+							],
+							"port": "6432",
+							"path": [
+								"customer-car",
+								"disassociate"
 							]
 						}
 					},
 					"response": []
 				}
 			]
-		},
-		{
-			"name": "get-customer",
-			"request": {
-				"method": "GET",
-				"header": [],
-				"url": {
-					"raw": "http://127.0.0.1:6432/customer/get/10",
-					"protocol": "http",
-					"host": [
-						"127",
-						"0",
-						"0",
-						"1"
-					],
-					"port": "6432",
-					"path": [
-						"customer",
-						"get",
-						"10"
-					]
-				}
-			},
-			"response": []
-		},
-		{
-			"name": "get-all-customers",
-			"request": {
-				"method": "GET",
-				"header": [],
-				"url": {
-					"raw": "http://127.0.0.1:6432/customer/getall",
-					"protocol": "http",
-					"host": [
-						"127",
-						"0",
-						"0",
-						"1"
-					],
-					"port": "6432",
-					"path": [
-						"customer",
-						"getall"
-					]
-				}
-			},
-			"response": []
-		},
-		{
-			"name": "add-customer",
-			"request": {
-				"method": "POST",
-				"header": [
-					{
-						"key": "Content-Type",
-						"value": "application/json",
-						"type": "text"
-					}
-				],
-				"body": {
-					"mode": "raw",
-					"raw": "{\r\n    \"email\": \"contact@contact.com\",\r\n    \"name\": \"Name\",\r\n    \"firstname\": \"Firstname\",\r\n    \"birthday\": \"01/01/1990\",\r\n    \"driving_licence_number\": \"MORGA657054SM9IJ\"\r\n}"
-				},
-				"url": {
-					"raw": "http://127.0.0.1:6432/customer/create",
-					"protocol": "http",
-					"host": [
-						"127",
-						"0",
-						"0",
-						"1"
-					],
-					"port": "6432",
-					"path": [
-						"customer",
-						"create"
-					]
-				}
-			},
-			"response": []
-		},
-		{
-			"name": "update-customer",
-			"request": {
-				"method": "PUT",
-				"header": [
-					{
-						"key": "Content-Type",
-						"value": "application/json",
-						"type": "text"
-					}
-				],
-				"body": {
-					"mode": "raw",
-					"raw": "{\r\n    \"id\": 0,\r\n    \"email\": \"contact@contact.com\",\r\n    \"name\": \"Name\",\r\n    \"firstname\": \"Firstname\",\r\n    \"birthday\": \"01/01/1990\",\r\n    \"driving_licence_number\": \"MORGA657054SM9IJ\"\r\n}"
-				},
-				"url": {
-					"raw": "http://127.0.0.1:6432/customer/update/10",
-					"protocol": "http",
-					"host": [
-						"127",
-						"0",
-						"0",
-						"1"
-					],
-					"port": "6432",
-					"path": [
-						"customer",
-						"update",
-						"10"
-					]
-				}
-			},
-			"response": []
-		},
-		{
-			"name": "associate-customer2car",
-			"request": {
-				"method": "POST",
-				"header": [
-					{
-						"key": "Content-Type",
-						"value": "application/json",
-						"type": "text"
-					}
-				],
-				"body": {
-					"mode": "raw",
-					"raw": "{\r\n    \"customer_id\": 0,\r\n    \"car_id\": 0\r\n}"
-				},
-				"url": {
-					"raw": "http://127.0.0.1:6432/customer-car/associate",
-					"protocol": "http",
-					"host": [
-						"127",
-						"0",
-						"0",
-						"1"
-					],
-					"port": "6432",
-					"path": [
-						"customer-car",
-						"associate"
-					]
-				}
-			},
-			"response": []
-		},
-		{
-			"name": "disassociate-customer2car",
-			"request": {
-				"method": "POST",
-				"header": [
-					{
-						"key": "Content-Type",
-						"value": "application/json",
-						"type": "text"
-					}
-				],
-				"body": {
-					"mode": "raw",
-					"raw": "{\r\n    \"customer_id\": 0,\r\n    \"car_id\": 0\r\n}",
-					"options": {
-						"raw": {
-							"language": "json"
-						}
-					}
-				},
-				"url": {
-					"raw": "http://127.0.0.1:6432/customer-car/disassociate",
-					"protocol": "http",
-					"host": [
-						"127",
-						"0",
-						"0",
-						"1"
-					],
-					"port": "6432",
-					"path": [
-						"customer-car",
-						"disassociate"
-					]
-				}
-			},
-			"response": []
 		}
 	]
 }
