--- a/docker.env
+++ b/docker.env
@@ -1,6 +1,6 @@
-ENV_LC_DB_USERNAME=postgres
+ENV_LC_DB_USERNAME
 ENV_LC_DB_PASSWORD
-ENV_LC_DB_HOST=172.17.0.2
-ENV_LC_DB_PORT=5432
-ENV_LC_DB_NAME=postgres
-ENV_LC_LISTENING_PORT=6432
+ENV_LC_DB_HOST
+ENV_LC_DB_PORT
+ENV_LC_DB_NAME
+ENV_LC_LISTENING_PORT
