Update docker.env : remove passwd Update Makefile : add sudo for noroot user Update README : add env variable in run command

--- a/docker.env
+++ b/docker.env
@@ -1,6 +1,5 @@
-ENV_LC_DB_USERNAME
-ENV_LC_DB_PASSWORD
-ENV_LC_DB_HOST
-ENV_LC_DB_PORT
-ENV_LC_DB_NAME
-ENV_LC_LISTENING_PORT
+ENV_LC_DB_USERNAME="postgres"
+ENV_LC_DB_HOST="127.0.0.1"
+ENV_LC_DB_PORT="5432"
+ENV_LC_DB_NAME="postgres"
+ENV_LC_LISTENING_PORT="6432"
