UPDATE README : demo link Update docker.env : remove double quote

--- a/docker.env
+++ b/docker.env
@@ -1,5 +1,6 @@
-ENV_LC_DB_USERNAME="postgres"
-ENV_LC_DB_HOST="127.0.0.1"
-ENV_LC_DB_PORT="5432"
-ENV_LC_DB_NAME="postgres"
-ENV_LC_LISTENING_PORT="6432"
+ENV_LC_DB_USERNAME=postgres
+ENV_LC_DB_PASSWORD=postgres_password_to_set
+ENV_LC_DB_HOST=127.0.0.1
+ENV_LC_DB_PORT=5432
+ENV_LC_DB_NAME=postgres
+ENV_LC_LISTENING_PORT=6432
