--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 build/
+.vscode/
 
 # Ignore go files go.sum
 go.sum
+
